--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
     You have been logged out.
 </div>
 <form th:action="@{/login}" method="post">
-    <div><label> email : <input type="text" name="email"/> </label></div>
+    <div><label> Email: <input type="email" name="username"/> </label></div>
     <div><label> Password: <input type="password" name="password"/> </label></div>
     <div><input type="submit" value="Sign In"/></div>
 </form>
